--- a/index.html
+++ b/index.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
-<html>
-<title>HTML Tutorial</title>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+
 <body>
+        <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
+        <div id='title'>
+          <span>
+            HELLO
+          </span>
+          <br>
+          <span>
+            THIS SITE BELONG TO HUYNH NHAT CUONG
+          </span>
+        </div>
+        
 
-<h1>Hello</h1>
-<p>This is Cuong' website. this will be comming soon</p>
+    <canvas id="canvas"></canvas>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            var canvas = $('#canvas')[0];
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
 
+            if (canvas.getContext) {
+                var ctx = canvas.getContext('2d');
+                var w = canvas.width;
+                var h = canvas.height;
+                ctx.strokeStyle = 'rgba(174,194,224,0.5)';
+                ctx.lineWidth = 1;
+                ctx.lineCap = 'round';
+
+
+                var init = [];
+                var maxParts = 1000;
+                for (var a = 0; a < maxParts; a++) {
+                    init.push({
+                        x: Math.random() * w,
+                        y: Math.random() * h,
+                        l: Math.random() * 1,
+                        xs: -4 + Math.random() * 4 + 2,
+                        ys: Math.random() * 10 + 10
+                    })
+                }
+
+                var particles = [];
+                for (var b = 0; b < maxParts; b++) {
+                    particles[b] = init[b];
+                }
+
+                function draw() {
+                    ctx.clearRect(0, 0, w, h);
+                    for (var c = 0; c < particles.length; c++) {
+                        var p = particles[c];
+                        ctx.beginPath();
+                        ctx.moveTo(p.x, p.y);
+                        ctx.lineTo(p.x + p.l * p.xs, p.y + p.l * p.ys);
+                        ctx.stroke();
+                    }
+                    move();
+                }
+
+                function move() {
+                    for (var b = 0; b < particles.length; b++) {
+                        var p = particles[b];
+                        p.x += p.xs;
+                        p.y += p.ys;
+                        if (p.x > w || p.y > h) {
+                            p.x = Math.random() * w;
+                            p.y = -20;
+                        }
+                    }
+                }
+
+                setInterval(draw, 30);
+
+            }
+        });
+
+
+    </script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
