--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Toys</title>
   </head>
   <body>
-    <script src="./dist/bundle.js"></script>
-    <script src="./dist/vendor.js"></script>
     <div id="root"></div>
+    <script type="text/javascript" src="/dist/vendor.js"></script>
+    <script type="text/javascript" src="/dist/bundle.js"></script>
+  </body>
 </html>
