--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="/dist/vendor.js"></script>
-    <script type="text/javascript" src="/dist/bundle.js"></script>
+    <script type="text/javascript" src="./dist/vendor.js"></script>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
   </body>
 </html>
