--- a/index.html
+++ b/index.html
@@ -5,16 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+      href="https://file.myfontastic.com/jx7W3DNvQ8Vp2MR4if9t63/icons.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-      crossorigin="anonymous"
     />
-    <title>Toys</title>
-  </head>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
+    <!-- <script src="https://file.myfontastic.com/jx7W3DNvQ8Vp2MR4if9t63/icons.js"></script> -->
+    <title>ADMINSITE</title>
+  <link href="style.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="./dist/vendor.js"></script>
-    <script type="text/javascript" src="./dist/bundle.js"></script>
-  </body>
+    <svg
+      style="width:0;height:0;position:absolute;"
+      aria-hidden="true"
+      focusable="false"
+    >
+      <linearGradient id="my-cool-gradient" x2="0" y2="1">
+        <stop offset="0%" stop-color="#324bc3" />
+        <!-- <stop offset="50%" stop-color="#324bc3" /> -->
+        <stop offset="100%" stop-color="#ec3f8c" />
+      </linearGradient>
+      <linearGradient id="white-gradient" x2="1" y2="1">
+        <stop offset="0%" stop-color="#ffff" />
+        <stop offset="50%" stop-color="#ffff" />
+        <stop offset="100%" stop-color="#ffff" />
+      </linearGradient>
+    </svg>
+  <script type="text/javascript" src="vendor.a826ac75ea155cc40409.js"></script><script type="text/javascript" src="bundle.a826ac75ea155cc40409.js"></script></body>
 </html>
