--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://file.myfontastic.com/jx7W3DNvQ8Vp2MR4if9t63/icons.css"
-      rel="stylesheet"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- <script src="https://file.myfontastic.com/jx7W3DNvQ8Vp2MR4if9t63/icons.js"></script> -->
-    <title>ADMINSITE</title>
-  <link href="style.css" rel="stylesheet"></head>
-  <body>
-    <div id="root"></div>
-    <svg
-      style="width:0;height:0;position:absolute;"
-      aria-hidden="true"
-      focusable="false"
-    >
-      <linearGradient id="my-cool-gradient" x2="0" y2="1">
-        <stop offset="0%" stop-color="#324bc3" />
-        <!-- <stop offset="50%" stop-color="#324bc3" /> -->
-        <stop offset="100%" stop-color="#ec3f8c" />
-      </linearGradient>
-      <linearGradient id="white-gradient" x2="1" y2="1">
-        <stop offset="0%" stop-color="#ffff" />
-        <stop offset="50%" stop-color="#ffff" />
-        <stop offset="100%" stop-color="#ffff" />
-      </linearGradient>
-    </svg>
-  <script type="text/javascript" src="vendor.a826ac75ea155cc40409.js"></script><script type="text/javascript" src="bundle.a826ac75ea155cc40409.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/ghost.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>NhatCuongTech</title><link href="/static/css/2.1d6907fe.chunk.css" rel="stylesheet"><link href="/static/css/main.16e723cd.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(l){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],f=0,i=[];f<n.length;f++)t=n[f],p[t]&&i.push(p[t][0]),p[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(l[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return c.push.apply(c,u||[]),a()}function a(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==p[u]&&(n=!1)}n&&(c.splice(r--,1),e=f(f.s=t[0]))}return e}var t={},p={1:0},c=[];function f(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return l[e].call(r.exports,r,r.exports,f),r.l=!0,r.exports}f.m=l,f.c=t,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(r,e){if(1&e&&(r=f(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)f.d(t,n,function(e){return r[e]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var r=window.webpackJsonp=window.webpackJsonp||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;a()}([])</script><script src="/static/js/2.0759f35b.chunk.js"></script><script src="/static/js/main.17bdece3.chunk.js"></script></body></html>
